# to-do

./: .gitignore  pyproject.toml
frontend/: index.html  script.js  style.css  todo.html
migrations/: env.py
migrations/versions/: 0cfcbbd124e0_create_users_table.py  fa91674d19b0_create_todos_table.py
tests/: conftest.py  factories.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todos.py  test_users.py
to_do/: app.py  database.py  models.py  schemas.py  security.py
to_do/routes/: auth.py  to_dos.py  users.py
